just added a logo and resolved some alignment issues

--- a/mainpage.css
+++ b/mainpage.css
@@ -29,7 +29,6 @@ body {
     color: red;
     text-align: center;
     margin: 10px 0;
-    font-weight: bold;
 }
 .content {
     display: flex;
